tests/invalid/set_missing_elem_eq/main.py
def main() -> None:
    s: set[int] = set()
    s.add("x")


if __name__ == "__main__":
    main()
